Deploy preview for PR 1 🛫

--- a/pr-preview/pr-1/rhods-intro/1.33/index.html
+++ b/pr-preview/pr-1/rhods-intro/1.33/index.html
@@ -46,7 +46,7 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter1/index.html">Chapter 1</a>
+    <a class="nav-link" href="chapter1/index.html">Introduction to Red&#160;Hat OpenShift Data Science</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="chapter1/section1.html">Introduction</a>
@@ -136,14 +136,57 @@
 </aside>
 <article class="doc">
 <h1 class="page">Welcome</h1>
+<div id="preamble">
+<div class="sectionbody">
 <div class="paragraph">
 <p>This quick course covers the foundations of Red&#160;Hat OpenShift Data Science (RHODS).</p>
 </div>
-<div class="paragraph">
-<p>You will become familiar with the general architecture and main features of RHODS.</p>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_prerequisites"><a class="anchor" href="#_prerequisites"></a>Prerequisites</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Experience with Red&#160;Hat OpenShift (optional)</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_objectives"><a class="anchor" href="#_objectives"></a>Objectives</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Become familiar with the general architecture and main features of Red&#160;Hat OpenShift Data Science</p>
+</li>
+<li>
+<p>Accessing and logging in to the Red&#160;Hat OpenShift Data Science web console</p>
+</li>
+<li>
+<p>Creating, sharing and deleting data science projects</p>
+</li>
+<li>
+<p>Creating a Workbench within a data science project</p>
+</li>
+<li>
+<p>Creating and deleting data connections</p>
+</li>
+<li>
+<p>Creating, importing (from Git repositories) and sharing Jupyter notebooks</p>
+</li>
+<li>
+<p>Install Python packages in your Jupyter notebooks</p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 <nav class="pagination">
-  <span class="next"><a href="chapter1/index.html">Chapter 1</a></span>
+  <span class="next"><a href="chapter1/index.html">Introduction to Red&#160;Hat OpenShift Data Science</a></span>
 </nav>
 </article>
   </div>
