Deploy preview for PR 1 🛫

--- a/pr-preview/pr-1/rhods-intro/1.33/appendix/appendix.html
+++ b/pr-preview/pr-1/rhods-intro/1.33/appendix/appendix.html
@@ -57,6 +57,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../chapter1/section3.html">Demo</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../chapter1/section4.html">Conclusion</a>
+  </li>
 </ul>
   </li>
 </ul>
