Deploy preview for PR 1 🛫

--- a/pr-preview/pr-1/rhods-intro/1.33/index.html
+++ b/pr-preview/pr-1/rhods-intro/1.33/index.html
@@ -144,6 +144,9 @@
 <div class="paragraph">
 <p>This quick course covers the foundations of Red&#160;Hat OpenShift Data Science (RHODS).</p>
 </div>
+<div class="paragraph">
+<p><strong>TODO</strong>: explain the classroom environment.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
