--- a/pr-preview/pr-1/rhods-intro/1.33/appendix/appendix.html
+++ b/pr-preview/pr-1/rhods-intro/1.33/appendix/appendix.html
@@ -52,7 +52,7 @@
     <a class="nav-link" href="../chapter1/section1.html">Introduction</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../chapter1/section2.html">Architecture of Red&#160;Hat OpenShift Data Science</a>
+    <a class="nav-link" href="../chapter1/section2.html">Architecture</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../chapter1/section3.html">Demo</a>
