Deploy preview for PR 1 🛫

--- a/pr-preview/pr-1/rhods-intro/1.33/index.html
+++ b/pr-preview/pr-1/rhods-intro/1.33/index.html
@@ -142,10 +142,44 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>This quick course covers the foundations of Red&#160;Hat OpenShift Data Science (RHODS).</p>
+<p>Welcome to this quick course on the <em>Introduction to Red&#160;Hat OpenShift Data Science (RHODS)</em>.
+This course is the first in a series of 6 courses about Red&#160;Hat OpenShift Data Science:</p>
 </div>
 <div class="paragraph">
-<p><strong>TODO</strong>: explain the classroom environment.</p>
+<p><strong>TODO</strong>: Provide link to the other courses when they are ready.</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Introduction to Red Hat OpenShift Data Science (<em>This course</em>)</p>
+</li>
+<li>
+<p>Data Analysis and Visualization with Red Hat OpenShift Data Science</p>
+</li>
+<li>
+<p>Creating Machine Learning Models with Red Hat OpenShift Data Science</p>
+</li>
+<li>
+<p>Deploying Machine Learning Models with Red Hat OpenShift Data Science</p>
+</li>
+<li>
+<p>Automation using Data Science Pipelines</p>
+</li>
+<li>
+<p>Red Hat OpenShift Data Science Administration</p>
+</li>
+</ol>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_classroom_environment"><a class="anchor" href="#_classroom_environment"></a>Classroom Environment</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>You will use the TBD catalog item from the Red Hat Demo Platform (<a href="https://demo.redhat.com" class="bare">https://demo.redhat.com</a>) to run the hands on exercises in this course.</p>
+</div>
+<div class="paragraph">
+<p><strong>TODO</strong>: Add actual link to catalog item after discussing with Jaime and the other SMEs.</p>
 </div>
 </div>
 </div>
@@ -155,7 +189,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Experience with Red&#160;Hat OpenShift (optional)</p>
+<p>Basic experience with Red&#160;Hat OpenShift</p>
 </li>
 </ul>
 </div>
@@ -164,6 +198,9 @@
 <div class="sect1">
 <h2 id="_objectives"><a class="anchor" href="#_objectives"></a>Objectives</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>The overall objectives of this course include:</p>
+</div>
 <div class="ulist">
 <ul>
 <li>
