--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -68,10 +68,10 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter2/index.html">Chapter 2</a>
+    <a class="nav-link" href="chapter2/index.html">Working with Data Science Projects</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/section1.html">Section 1</a>
+    <a class="nav-link" href="chapter2/section1.html">Data Science Projects</a>
   </li>
 </ul>
   </li>
