--- a/rhods-intro/1.33/appendix/appendix.html
+++ b/rhods-intro/1.33/appendix/appendix.html
@@ -73,6 +73,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../chapter2/section1.html">Data Science Projects</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../chapter2/section2.html">Workbenches</a>
+  </li>
 </ul>
   </li>
 </ul>
