--- a/pr-preview/pr-6/rhods-intro/1.33/appendix/appendix.html
+++ b/pr-preview/pr-6/rhods-intro/1.33/appendix/appendix.html
@@ -74,6 +74,9 @@
     <a class="nav-link" href="../chapter2/section1.html">Data Science Projects</a>
   </li>
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../chapter2/section2.html">Workbenches</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../chapter2/section3.html">Data Connections</a>
   </li>
 </ul>
