--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -76,6 +76,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="chapter2/section2.html">Workbenches</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter2/section3.html">Data Connections</a>
+  </li>
 </ul>
   </li>
 </ul>
