--- a/rhods-intro/1.33/appendix/appendix.html
+++ b/rhods-intro/1.33/appendix/appendix.html
@@ -79,6 +79,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../chapter2/section3.html">Data Connections</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="../chapter2/section4.html">Lab</a>
+  </li>
 </ul>
   </li>
 </ul>
