--- a/rhods-intro/1.33/appendix/appendix.html
+++ b/rhods-intro/1.33/appendix/appendix.html
@@ -96,7 +96,7 @@
     <a class="nav-link" href="../chapter3/section1.html">Introduction</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../chapter3/section2.html">Section 2</a>
+    <a class="nav-link" href="../chapter3/section2.html">Collaborating</a>
   </li>
 </ul>
   </li>
@@ -152,7 +152,7 @@
 <p>Content for Appendix A&#8230;&#8203;</p>
 </div>
 <nav class="pagination">
-  <span class="prev"><a href="../chapter3/section2.html">Section 2</a></span>
+  <span class="prev"><a href="../chapter3/section2.html">Collaborating</a></span>
 </nav>
 </article>
   </div>
