--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -96,7 +96,7 @@
     <a class="nav-link" href="chapter3/section1.html">Introduction</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter3/section2.html">Section 2</a>
+    <a class="nav-link" href="chapter3/section2.html">Collaborating</a>
   </li>
 </ul>
   </li>
