--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -101,6 +101,9 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="chapter3/section3.html">Customizing</a>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter3/section4.html">Lab</a>
+  </li>
 </ul>
   </li>
 </ul>
