--- a/pr-preview/pr-21/rhods-intro/1.33/index.html
+++ b/pr-preview/pr-21/rhods-intro/1.33/index.html
@@ -171,7 +171,7 @@ This course is the first in a series of 6 courses about Red Hat OpenShift Data S
 <p><a href="https://redhatquickcourses.github.io/rhods-model">Creating Machine Learning Models with Red Hat OpenShift Data Science</a></p>
 </li>
 <li>
-<p><a href="https://redhatquickcourses.github.io/rhods-deploy">Machine Learning Models with Red Hat OpenShift Data Science</a></p>
+<p><a href="https://redhatquickcourses.github.io/rhods-deploy">Deploying Machine Learning Models with Red Hat OpenShift Data Science</a></p>
 </li>
 <li>
 <p><a href="https://redhatquickcourses.github.io/rhods-pipelines">Automation using Data Science Pipelines</a></p>
