--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -165,7 +165,7 @@ This course is the first in a series of 6 courses about Red Hat OpenShift Data S
 <p><a href="https://redhatquickcourses.github.io/rhods-admin">Red Hat OpenShift Data Science Administration</a></p>
 </li>
 <li>
-<p><a href="https://redhatquickcourses.github.io/rhods-analysis">Data Analysis and Visualization with Red Hat OpenShift Data Science</a></p>
+<p>Data Analysis and Visualization with Red Hat OpenShift Data Science (Under Development)</p>
 </li>
 <li>
 <p><a href="https://redhatquickcourses.github.io/rhods-model">Creating Machine Learning Models with Red Hat OpenShift Data Science</a></p>
