deploy: 1ab11690a9cc11ab1452dce66556ea2da02fb0bb

--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -154,7 +154,7 @@
 <div class="sectionbody">
 <div class="paragraph">
 <p>Welcome to this quick course on the <em>Introduction to Red Hat OpenShift AI</em>.
-This course is the first in a series of 6 courses about Red Hat OpenShift AI:</p>
+This course is the <strong>first</strong> in a series of <strong>five</strong> courses about Red Hat OpenShift AI:</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -163,9 +163,6 @@ This course is the first in a series of 6 courses about Red Hat OpenShift AI:</p
 </li>
 <li>
 <p><a href="https://redhatquickcourses.github.io/rhods-admin">Red Hat OpenShift AI Administration</a></p>
-</li>
-<li>
-<p>Data Analysis and Visualization with Red Hat OpenShift AI (Under Development)</p>
 </li>
 <li>
 <p><a href="https://redhatquickcourses.github.io/rhods-model">Creating Machine Learning Models with Red Hat OpenShift AI</a></p>
@@ -217,7 +214,7 @@ After you have completed all the courses in the learning path, you can attempt t
 <h2 id="_classroom_environment"><a class="anchor" href="#_classroom_environment"></a>Classroom Environment</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHOAI on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.</p>
+<p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHODS on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.</p>
 </div>
 <div class="paragraph">
 <p>This classroom has a pre-installed version of Red Hat OpenShift AI on OpenShift. The other courses in the learning path use a different catalog item from RHDP. Inspect the prerequisites and classroom requirements in the respective individual courses.</p>
