Deploy preview for PR 32 🛫

--- a/pr-preview/pr-32/rhods-intro/1.33/index.html
+++ b/pr-preview/pr-32/rhods-intro/1.33/index.html
@@ -214,7 +214,7 @@ After you have completed all the courses in the learning path, you can attempt t
 <h2 id="_classroom_environment"><a class="anchor" href="#_classroom_environment"></a>Classroom Environment</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This introductory course has a few, simple hands-on labs. Provision your own Red Hat OpenShift AI cluster using the Red Hat Hybrid Cloud Console at <a href="https://console.redhat.com/application-services/data-science" class="bare">https://console.redhat.com/application-services/data-science</a>. For a simple, no-cost access to an Red Hat OpenShift AI instance useful for experimentation, click on the "Try it in the sandbox" link and follow the on-screen instructions.</p>
+<p>If you don&#8217;t already have access to Red Hat OpenShift AI, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>. The <strong>Try it in the sandbox</strong> option provides free access to a Red Hat OpenShift AI instance useful for experimentation.</p>
 </div>
 <div class="paragraph">
 <p>The other courses in the learning path use a different classroom. Inspect the prerequisites and classroom requirements in the respective individual courses.</p>
