--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -214,7 +214,10 @@ After you have completed all the courses in the learning path, you can attempt t
 <h2 id="_classroom_environment"><a class="anchor" href="#_classroom_environment"></a>Classroom Environment</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>If you don&#8217;t already have access to Red Hat OpenShift AI, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>. The <strong>Try it in the sandbox</strong> option provides free access to a Red Hat OpenShift AI instance useful for experimentation.</p>
+<p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHODS on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.</p>
+</div>
+<div class="paragraph">
+<p>For Red Hat partners who do not have access to RHDP, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>.</p>
 </div>
 <div class="paragraph">
 <p>The other courses in the learning path use a different classroom. Inspect the prerequisites and classroom requirements in the respective individual courses.</p>
