deploy: 6e990514d30ce3052aeabaa2066da1a6b7dbe330

--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -217,7 +217,7 @@ After you have completed all the courses in the learning path, you can attempt t
 <p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHODS on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.</p>
 </div>
 <div class="paragraph">
-<p>For Red Hat partners who do not have access to RHDP, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>.</p>
+<p>For Red Hat partners who do not have access to RHDP, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>. Unfortunately, the labs will NOT work on the trial sandbox environment. You need to provision an OpenShift AI cluster on-premises, or in the supported cloud environments by following the product documentation at <a href="https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024" class="bare">https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024</a>.</p>
 </div>
 <div class="paragraph">
 <p>The other courses in the learning path use a different classroom. Inspect the prerequisites and classroom requirements in the respective individual courses.</p>
