deploy: 4d14a6851b1bbd337aac210c1b29ee82e8fb844f

--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -187,6 +187,18 @@ After you have completed all the courses in the learning path, you can attempt t
 </tr>
 </table>
 </div>
+<div class="admonitionblock important">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-important" title="Important"></i>
+</td>
+<td class="content">
+The hands-on labs in this course were created and tested with RHOAI v2.4. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you run into any issues.
+</td>
+</tr>
+</table>
+</div>
 </div>
 </div>
 <div class="sect1">
