Deploy preview for PR 44 🛫

--- a/pr-preview/pr-44/rhods-intro/1.33/index.html
+++ b/pr-preview/pr-44/rhods-intro/1.33/index.html
@@ -55,10 +55,7 @@
     <a class="nav-link" href="chapter1/section2.html">Architecture</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter1/section3.html">Demo</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter1/section4.html">Conclusion</a>
+    <a class="nav-link" href="chapter1/section3.html">Conclusion</a>
   </li>
 </ul>
   </li>
@@ -80,7 +77,10 @@
     <a class="nav-link" href="chapter2/section3.html">Data Connections</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/section4.html">Lab</a>
+    <a class="nav-link" href="chapter2/section4.html">Demo</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter2/section5.html">Lab</a>
   </li>
 </ul>
   </li>
@@ -194,7 +194,7 @@ After you have completed all the courses in the learning path, you can attempt t
 <i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
-The hands-on labs in this course were created and tested with RHOAI v2.4. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you run into any issues.
+The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you run into any issues.
 </td>
 </tr>
 </table>
@@ -253,25 +253,25 @@ The hands-on labs in this course were created and tested with RHOAI v2.4. Labs s
 <div class="ulist">
 <ul>
 <li>
-<p>Become familiar with the general architecture and main features of Red&#160;Hat OpenShift AI</p>
+<p>Familiarize with the general architecture and main features of Red&#160;Hat OpenShift AI</p>
 </li>
 <li>
-<p>Accessing and logging in to the Red&#160;Hat OpenShift AI web console</p>
+<p>Access and log in to the Red&#160;Hat OpenShift AI web console</p>
 </li>
 <li>
-<p>Creating, sharing and deleting data science projects</p>
+<p>Create, share and delete data science projects</p>
 </li>
 <li>
-<p>Creating a Workbench within a data science project</p>
+<p>Create a workbench within a data science project</p>
 </li>
 <li>
-<p>Creating and deleting data connections</p>
+<p>Create and delete data connections</p>
 </li>
 <li>
-<p>Creating, importing (from Git repositories) and sharing Jupyter notebooks</p>
+<p>Create, import (from Git repositories) and share Jupyter Notebook</p>
 </li>
 <li>
-<p>Install Python packages in your Jupyter notebooks</p>
+<p>Install Python packages in your Jupyter Notebook</p>
 </li>
 </ul>
 </div>
