deploy: a7e3cf8dff55f495b437845b7136d300607f46fd

--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -55,10 +55,7 @@
     <a class="nav-link" href="chapter1/section2.html">Architecture</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter1/section3.html">Demo</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter1/section4.html">Conclusion</a>
+    <a class="nav-link" href="chapter1/section3.html">Conclusion</a>
   </li>
 </ul>
   </li>
@@ -80,7 +77,10 @@
     <a class="nav-link" href="chapter2/section3.html">Data Connections</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/section4.html">Lab</a>
+    <a class="nav-link" href="chapter2/section4.html">Demo</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter2/section5.html">Lab</a>
   </li>
 </ul>
   </li>
@@ -194,7 +194,7 @@ After you have completed all the courses in the learning path, you can attempt t
 <i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
-The hands-on labs in this course were created and tested with RHOAI v2.4. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you run into any issues.
+The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you run into any issues.
 </td>
 </tr>
 </table>
@@ -226,10 +226,10 @@ The hands-on labs in this course were created and tested with RHOAI v2.4. Labs s
 <h2 id="_classroom_environment"><a class="anchor" href="#_classroom_environment"></a>Classroom Environment</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHODS on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.</p>
+<p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHOAI on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.</p>
 </div>
 <div class="paragraph">
-<p>For Red Hat partners who do not have access to RHDP, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>. Unfortunately, the labs will NOT work on the trial sandbox environment. You need to provision an OpenShift AI cluster on-premises, or in the supported cloud environments by following the product documentation at <a href="https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024" class="bare">https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024</a>.</p>
+<p>For Red Hat partners who do not have access to RHDP, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>. Unfortunately, the labs will NOT work on the trial sandbox environment. You need to provision an OpenShift AI cluster on-premises, or in the supported cloud environments by following the product documentation at <a href="https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024">Product Documentation for Red Hat OpenShift AI 2024</a>.</p>
 </div>
 <div class="paragraph">
 <p>The other courses in the learning path use a different classroom. Inspect the prerequisites and classroom requirements in the respective individual courses.</p>
@@ -253,25 +253,25 @@ The hands-on labs in this course were created and tested with RHOAI v2.4. Labs s
 <div class="ulist">
 <ul>
 <li>
-<p>Become familiar with the general architecture and main features of Red&#160;Hat OpenShift AI</p>
+<p>Familiarize with the general architecture and main features of Red&#160;Hat OpenShift AI</p>
 </li>
 <li>
-<p>Accessing and logging in to the Red&#160;Hat OpenShift AI web console</p>
+<p>Access and log in to the Red&#160;Hat OpenShift AI web console</p>
 </li>
 <li>
-<p>Creating, sharing and deleting data science projects</p>
+<p>Create, share and delete data science projects</p>
 </li>
 <li>
-<p>Creating a Workbench within a data science project</p>
+<p>Create a workbench within a data science project</p>
 </li>
 <li>
-<p>Creating and deleting data connections</p>
+<p>Create and delete data connections</p>
 </li>
 <li>
-<p>Creating, importing (from Git repositories) and sharing Jupyter notebooks</p>
+<p>Create, import (from Git repositories) and share Jupyter Notebook</p>
 </li>
 <li>
-<p>Install Python packages in your Jupyter notebooks</p>
+<p>Install Python packages in your Jupyter Notebook</p>
 </li>
 </ul>
 </div>
