deploy: 9f70fa8e40038e67a18dd0e4a35de99e966f833c

--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -194,7 +194,7 @@ After you have completed all the courses in the learning path, you can attempt t
 <i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
-The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you run into any issues.
+The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs should mostly work without any changes in minor dot release upgrades of the product. Please open issues in this repository if you face any issue.
 </td>
 </tr>
 </table>
@@ -226,13 +226,14 @@ The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs
 <h2 id="_classroom_environment"><a class="anchor" href="#_classroom_environment"></a>Classroom Environment</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHOAI on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.</p>
+<p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHOAI on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands-on exercises in this course.</p>
 </div>
 <div class="paragraph">
 <p>For Red Hat partners who do not have access to RHDP, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>. Unfortunately, the labs will NOT work on the trial sandbox environment. You need to provision an OpenShift AI cluster on-premises, or in the supported cloud environments by following the product documentation at <a href="https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024">Product Documentation for Red Hat OpenShift AI 2024</a>.</p>
 </div>
 <div class="paragraph">
-<p>The other courses in the learning path use a different classroom. Inspect the prerequisites and classroom requirements in the respective individual courses.</p>
+<p>The other courses in the learning path use a different classroom. Inspect the prerequisites and
+classroom requirements in the respective individual courses.</p>
 </div>
 </div>
 </div>
@@ -240,7 +241,7 @@ The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs
 <h2 id="_prerequisites"><a class="anchor" href="#_prerequisites"></a>Prerequisites</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>For this introductory course, basic experience with Red&#160;Hat OpenShift is recommended but not mandatory.</p>
+<p>For this introductory course, basic experience with Red&#160;Hat OpenShift is recommended but is not mandatory.</p>
 </div>
 </div>
 </div>
@@ -259,7 +260,7 @@ The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs
 <p>Access and log in to the Red&#160;Hat OpenShift AI web console</p>
 </li>
 <li>
-<p>Create, share and delete data science projects</p>
+<p>Create, share, and delete data science projects</p>
 </li>
 <li>
 <p>Create a workbench within a data science project</p>
@@ -268,7 +269,7 @@ The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs
 <p>Create and delete data connections</p>
 </li>
 <li>
-<p>Create, import (from Git repositories) and share Jupyter Notebook</p>
+<p>Create, import (from Git repositories), and share Jupyter Notebook</p>
 </li>
 <li>
 <p>Install Python packages in your Jupyter Notebook</p>
