deploy: 5eb94cdc6b195036cae9a90879257c7173b244f3

--- a/rhods-intro/1.33/index.html
+++ b/rhods-intro/1.33/index.html
@@ -229,6 +229,25 @@ The hands-on labs in this course were created and tested with RHOAI v2.8.0. Labs
 <p>This introductory course has a few, simple hands-on labs. You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHOAI on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands-on exercises in this course.</p>
 </div>
 <div class="paragraph">
+<p>When ordering this catalog item in RHDP:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Select <strong>Practice/Enablement</strong> for the <strong>Activity</strong> field</p>
+</li>
+<li>
+<p>Select <strong>Learning about the Product</strong> for the <strong>Purpose</strong> field</p>
+</li>
+<li>
+<p>Enter <strong>Learning RHOAI</strong> in the <strong>Salesforce ID</strong> field</p>
+</li>
+<li>
+<p>Select the nearest AWS region in the <strong>Region</strong> field</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
 <p>For Red Hat partners who do not have access to RHDP, provision an environment using the <a href="https://console.redhat.com/application-services/data-science" target="_blank" rel="noopener">Red Hat Hybrid Cloud Console</a>. Unfortunately, the labs will NOT work on the trial sandbox environment. You need to provision an OpenShift AI cluster on-premises, or in the supported cloud environments by following the product documentation at <a href="https://access.redhat.com/documentation/en-us/red_hat_openshift_ai/2024">Product Documentation for Red Hat OpenShift AI 2024</a>.</p>
 </div>
 <div class="paragraph">
